crates/uitest/fixtures/ty_check/effect_trait_unsatisfied.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/effect_trait_unsatisfied.fe
---
error[8-0075]: keyed effect binding `Logger` requires `Silent` to implement `Logger`
   ┌─ effect_trait_unsatisfied.fe:22:20
   │
22 │     with (Logger = Silent {}) {
   │                    ^^^^^^^^^ `Silent` does not implement `Logger` for effect `Logger`
